Rota delete user
